[package]
name = "ndi-sdk"
version = "0.1.0"
authors = ["Adrian 'vifino' Pistol <vifino@posteo.net>"]
description = "Dynamically-loading NDI SDK bindings"
categories = ["api-bindings"]
keywords = ["ndi", "ffi", "dlopen", "dylib", "shared"]
license = "MIT"
edition = "2021"
build = "build.rs"

[dependencies]
libloading = "0.8.7"
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.71.1"
regex = "1"
